--- a/style.css
+++ b/style.css
@@ -1,96 +1,262 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*STYLES GENERAUX*/
+*{
+  font-family: Avenir, sans-serif;
+  padding: 0px;
+  margin: 0px;
+  text-align: justify;
+  box-sizing: border-box;
+}
+body{
+  background: #ededed;
+}
+p{
+  font-size: 1em;
+  line-height: 1.5em;
+}
+a{
+  text-decoration: none;
+  color: #000;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+/*HEADER & FOOTER*/
+header, footer{
+  width: 100%;
+  padding: 20px 0px;
+  background: url("public/aurore-boreale.jpeg") #4f4f4f;
+  box-shadow: 0px 0px 15px #333;
 }
-a:hover {
-  color: #535bf2;
+header{
+  border-bottom: 2px solid #fff;
+  height: 120px;
 }
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
+header h1{
+  color: white;
+  font-size: 1.5em;
+  width: 90%;
   margin: 0 auto;
-  padding: 2rem;
+}
+
+footer{
+  border-top: 2px solid #fff;
+}
+footer p{
+  width: 90%;
+  margin: 0 auto;
+  color: #fff;
   text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+footer a{
+  color: #fff;
 }
 
-.card {
-  padding: 2em;
+/*SECTIONS*/
+section{
+  display: flex; 
+  flex-flow: row wrap;
+  justify-content: center;
+  width: 100%;
+  padding-bottom: 20px;
+  margin: 20px auto;
+  box-shadow: 0px 0px 10px #bbb;
+  background-color: #fff;
 }
 
-.read-the-docs {
-  color: #888;
+section h2{
+  margin: 20px 0;
+  width: 90%;
+}
+section > div{
+  width: 90%;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+/*SECTION INFOS*/
+.photo{
+  text-align: center;
 }
-button:hover {
-  border-color: #646cff;
+.photo img{
+  width: 150px;
+  height: 150px;
+  border: 3px solid #fff;
+  box-shadow: 0px 0px 10px #777;
+  border-radius: 50%;
+  margin-top: -80px;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.prez{
+  border-bottom: 2px dashed #ccc;
+}
+.prez a{
+  display: block;
+  text-align: center;
+  padding: 10px;
+  margin: 10px auto 30px auto;
+  color: #fff;
+  background-color: #EA0;
+  box-shadow: 0px 0px 10px #ccc;
+  border-radius: 5px;
+}
+.contact-flex{
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+}
+.contact-flex p:first-child{
+  flex: 0 0 40%;
+}
+.contact-flex p:last-child{
+  flex: 0 0 60%;
+}
+.social{
+  display: flex;
+  justify-content: space-around;
+  margin: 10px auto 0px auto;
+}
+.social img{
+  width: 40px;
+  height: 40px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+/*SECTION EXP ET FORMATION*/
+.exp{
+  display: flex;
+  flex-flow: row wrap;
+  border-bottom: 1px solid #bbb;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+.exp-info{
+  display: flex;
+  flex-flow: column wrap;
+}
+.exp-logo{
+  flex: 0 0 25%;
+  max-width: 100px;
+}
+.exp-info{
+  flex: 0 0 70%;
+  margin-left: auto;
+}
+.exp img{
+  width: 100%;
+}
+.exp h3{
+  font-size:  1.2em;
+}
+.exp h4{
+  font-size:  1em;
+  font-weight: normal;
+}
+
+/*SECTION COMPETENCES*/
+.h3gauche{
+  width: 90%;
+}
+.comp{
+  display:flex;
+  flex-flow: row wrap;
+  margin-bottom: 10px;
+}
+.comp p{
+  flex: 0 0 40%;
+}
+.conteneur-barre{
+  flex: 0 0 60%;
+  border-radius: 5px;
+  background-color: grey;
+  border-bottom: 1px ridge grey;
+}
+.barre{
+  display: block;
+  height: 100%;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+.c85{
+  width: 85%;
+  background-color: #8B8;
+}
+.c90{
+  width: 90%;
+  background-color: #4B8;
+}
+.c95{
+  width: 95%;
+  background-color: #4B8;
+}
+.c100{
+  width: 100%;
+  background-color: #4B8;
+  border-radius: 5px;
+}
+.comp2{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+.conteneur-barre2{
+  flex: 0 0 100%;
+  height: 0.5em;
+  margin-bottom: 0.25em;
+  border-radius: 5px;
+  background-color: grey;
+}
+
+/*SECTION INTERETS*/
+.interet{
+  flex: 0 1 50%;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.interet img{
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 15px #555;
+}
+
+/*VERSION BUREAU DU CV*/
+@media screen and (min-width: 980px){
+  section{
+      width: 80%;
+      box-shadow: 0px 0px 10px #bbb;
   }
-  a:hover {
-    color: #747bff;
+  a:hover{
+      color: #EA0;
   }
-  button {
-    background-color: #f9f9f9;
+  header h1{
+      width: 80%;
+  }
+  .prez, .contact{
+      flex: 0 0 45%;
+  }
+  .prez{
+      border-bottom: none;
+      border-right: 2px solid #ccc;
+      padding-right: 20px;
+      margin-left: auto;
+  }
+  .contact{
+      padding-left: 20px;
+      margin-right: auto;
+  }
+  .prez a{
+      border: 2px solid transparent;
+  }
+  .prez a:hover{
+      color: #f28835;
+      background-color: #fff;
+      border: 2px solid #f28835;
+      box-shadow: 0px 0px 20px #666;
+  }
+  .exp-logo{
+      flex: 0 0 10%;
+  }
+  .exp-info, .exp-desc{
+      flex: 0 0 85%;
+      margin-left: auto;
+  }
+  .interet{
+      flex: 0 1 25%;
   }
 }
